--- a/app/views/images/show.html.haml
+++ b/app/views/images/show.html.haml
@@ -1,7 +1,13 @@
 = image_tag @record.image.url
 %br
+%h4
+  Price =
   = @record.price
 %br
+%h4
+  URL =
   = @record.image.path
 %br
+%h4
+  File Name =
   = @record.image_file_name
