Super final version

--- a/app/views/images/show.html.haml
+++ b/app/views/images/show.html.haml
@@ -11,3 +11,8 @@
 %h4
   File Name =
   = @record.image_file_name
+%br
+  for see template in another format just type:
+  %h4
+    ".json"
+  in your browser address field after number
